--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "mercedlogger": "^1.0.1",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "uuidv4": "^6.2.13"
   }
 }
